--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             </div>
             <div class="prj-line r2">
               <p>Nhiệm vụ</p>
-              <p>- Phát triển - Review code - Rối ưu code - Xử lý lỗi.</p>
+              <p>- Phát triển - Review code - Tối ưu code - Xử lý lỗi.</p>
             </div>
             <div class="prj-line r2">
               <p>Công nghệ</p>
@@ -358,7 +358,7 @@
             </div>
             <div class="prj-line r2">
               <p>Nhiệm vụ</p>
-              <p>- Phát triển - Review code - Rối ưu code - Xử lý lỗi.</p>
+              <p>- Phát triển - Review code - Tối ưu code - Xử lý lỗi.</p>
             </div>
             <div class="prj-line r2">
               <p>Công nghệ</p>
@@ -389,7 +389,7 @@
             </div>
             <div class="prj-line r2">
               <p>Nhiệm vụ</p>
-              <p>- Phát triển - Review code - Rối ưu code - Xử lý lỗi.</p>
+              <p>- Phát triển - Review code - Tối ưu code - Xử lý lỗi.</p>
             </div>
             <div class="prj-line r2">
               <p>Công nghệ</p>
